// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuditLogEvent/> render() should render when the rule has a triggering event type 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          settings
        </i>
      </div>
      <div
        id="rule-code-1-foo"
      >
        <span
          class="actionName"
        >
          Rule "
          <a
            href="/app/settings/rules/1"
            rel="noreferrer"
            target="_blank"
          >
            Rule 1
          </a>
          " executed
        </span>
        <span
          class="filler"
        >
          on "
          ticket created
          "
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
  <div
    class="failedActions"
  />
</div>
`;

exports[`<AuditLogEvent/> render() should render when the user ID is missing 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          loop
        </i>
      </div>
      <span
        class="actionName"
      >
        Reopened
      </span>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ai-suggestion-suggested 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          lightbulb
        </i>
      </div>
      <span>
        <span
          class="actionName"
        >
          Gorgias AI
        </span>
         suggested
         
        <span
          id="ai-suggestion-event-log"
        >
          <u>
            an answer
          </u>
        </span>
         
        for this ticket
      </span>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type rule-executed 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          settings
        </i>
      </div>
      <div
        id="rule-code-1-foo"
      >
        <span
          class="actionName"
        >
          Rule "
          <a
            href="/app/settings/rules/1"
            rel="noreferrer"
            target="_blank"
          >
            Rule 1
          </a>
          " executed
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
  <div
    class="failedActions"
  />
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type rule-executed 2`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          settings
        </i>
      </div>
      <span
        class="actionName"
      >
        Rule
         "
        <a
          rel="noreferrer"
          target="_blank"
          title="Rule"
          to="/app/settings/rules/library?rule_suggestion"
        >
          rule_suggestion
        </a>
        " 
        applied to ticket manually
      </span>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type rule-suggestion-suggested 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          lightbulb
        </i>
      </div>
      <span
        class="actionName"
      >
        Gorgias Tip suggested rule
         "
        <a
          rel="noreferrer"
          target="_blank"
          title="Rule"
          to="/app/settings/rules/library?rule_suggestion"
        >
          rule_suggestion
        </a>
        " 
        to ticket
      </span>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-assigned 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          person_add
        </i>
      </div>
      <span
        class="actionName"
      >
        Assigned
      </span>
      <span
        class="filler"
      >
        to
      </span>
      <div
        class="AgentLabel assigneeLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-assigned and missing assignee 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          person_add
        </i>
      </div>
      <span
        class="actionName"
      >
        Assigned
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-closed 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon success"
      >
        <i
          class="material-icons"
        >
          done
        </i>
      </div>
      <span
        class="actionName"
      >
        Closed
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-created 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          add
        </i>
      </div>
      <span
        class="actionName"
      >
        Created
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-customer-updated 1`] = `null`;

exports[`<AuditLogEvent/> render() should render with event type ticket-marked-spam 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon warning"
      >
        <i
          class="material-icons"
        >
          flag
        </i>
      </div>
      <span
        class="actionName"
      >
        Marked as spam
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-merged 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          call_merge
        </i>
      </div>
      <span
        class="actionName"
      >
        Merged
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-message-summary-created 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          email
        </i>
      </div>
      <span
        class="actionName"
      >
        <b>
          Chat summarized
        </b>
         -
         
        <a
          href="#"
        >
          <u>
            Unseen chat messages
          </u>
        </a>
         
        were sent by email
         
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-reopened 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          loop
        </i>
      </div>
      <span
        class="actionName"
      >
        Reopened
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-self-unsnoozed 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          timer_off
        </i>
      </div>
      <span
        class="actionName"
      >
        Snooze delay ended
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-snoozed 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          timer
        </i>
      </div>
      <span
        class="actionName"
      >
        Snoozed
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-subject-updated 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          mode
        </i>
      </div>
      <span
        class="actionName"
      >
        Subject updated
      </span>
      <span
        class="equalFiller"
      >
        from
      </span>
      <span
        class="actionName"
      >
        foo
      </span>
      <span
        class="equalFiller"
      >
        to
      </span>
      <span
        class="actionName"
      >
        bar
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-tags-added 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          local_offer
        </i>
      </div>
      <span
        class="actionName"
      >
        Tagged
      </span>
      <span
        class="badge-tag equalFiller badge badge-secondary"
      >
        tag-1
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-tags-added and several tags 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          local_offer
        </i>
      </div>
      <span
        class="actionName"
      >
        Tagged
      </span>
      <span
        class="badge-tag equalFiller badge badge-secondary"
      >
        tag-1
      </span>
      <span
        class="badge-tag equalFiller badge badge-secondary"
      >
        tag-2
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-tags-removed 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          local_offer
        </i>
      </div>
      <span
        class="actionName"
      >
        Untagged
      </span>
      <span
        class="badge-tag equalFiller badge badge-secondary"
      >
        tag-1
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-tags-removed and several tags 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          local_offer
        </i>
      </div>
      <span
        class="actionName"
      >
        Untagged
      </span>
      <span
        class="badge-tag equalFiller badge badge-secondary"
      >
        tag-1
      </span>
      <span
        class="badge-tag equalFiller badge badge-secondary"
      >
        tag-2
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-team-assigned 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          group_add
        </i>
      </div>
      <span
        class="actionName"
      >
        Assigned
      </span>
      <span
        class="filler"
      >
        to
      </span>
      <div
        class="TeamLabel assigneeLabel"
      >
        <span
          class="material-icons md-2"
        >
          people
        </span>
        <span
          class="name"
        >
          Team 1
        </span>
      </div>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-team-assigned and missing assignee 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          group_add
        </i>
      </div>
      <span
        class="actionName"
      >
        Assigned
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-team-unassigned 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          person_add_disabled
        </i>
      </div>
      <span
        class="actionName"
      >
        Unassigned from team
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-trashed 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon danger"
      >
        <i
          class="material-icons"
        >
          delete
        </i>
      </div>
      <span
        class="actionName"
      >
        Deleted
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-unassigned 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          person_add_disabled
        </i>
      </div>
      <span
        class="actionName"
      >
        Unassigned from user
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-unmarked-spam 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          undo
        </i>
      </div>
      <span
        class="actionName"
      >
        Unmarked as spam
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;

exports[`<AuditLogEvent/> render() should render with event type ticket-untrashed 1`] = `
<div
  class="component"
>
  <div
    class="event"
  >
    <div
      class="content"
    >
      <div
        class="icon"
      >
        <i
          class="material-icons"
        >
          undo
        </i>
      </div>
      <span
        class="actionName"
      >
        Undeleted
      </span>
      <span
        class="filler"
      >
        by
      </span>
      <div
        class="AgentLabel"
      >
        <span
          class="material-icons md-2"
          data-testid="accountCircle"
        >
          account_circle
        </span>
        <span
          class="name"
        >
          User 1
        </span>
      </div>
    </div>
    <div>
      2019-11-15 19:00:00.000000
    </div>
  </div>
</div>
`;
